--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/testRetrofitActivity"
-        android:name="com.pouyaheydari.training.sematec.android.advanced.shahrivar00.TestRetrofitActivity"
+        android:name="com.pouyaheydari.training.sematec.android.advanced.shahrivar00.mvvm.TestRetrofitFragment"
         android:label="activity_test_retrofit"
         tools:layout="@layout/activity_test_retrofit" >
         <action
